Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -2015,7 +2015,7 @@ msgstr "\"%s\" potrebuje razširitev %s"
 #: libraries/config/FormDisplay.class.php:747
 #, php-format
 msgid "import will not work, missing function (%s)"
-msgstr ""
+msgstr "uvoz ne bo deloval, manjka funkcija (%s)"
 
 #: libraries/config/FormDisplay.class.php:751
 #, php-format
