--- a/po/sl.po
+++ b/po/sl.po
@@ -2027,10 +2027,9 @@ msgid "SQL Validator is disabled"
 msgstr "Preverjalnik SQL je onemogočen"
 
 #: libraries/config/FormDisplay.class.php:765
-#, fuzzy
 #| msgid "PHP extension to use"
 msgid "SOAP extension not found"
-msgstr "Razširitev PHP za uporabo"
+msgstr "Razširitev SOAP ni najdena"
 
 #: libraries/config/FormDisplay.class.php:773
 #, fuzzy, php-format
