--- a/po/sl.po
+++ b/po/sl.po
@@ -2032,10 +2032,10 @@ msgid "SOAP extension not found"
 msgstr "Razširitev SOAP ni najdena"
 
 #: libraries/config/FormDisplay.class.php:773
-#, fuzzy, php-format
+#, php-format
 #| msgid "Maximum tables"
 msgid "maximum %s"
-msgstr "Največ tabel"
+msgstr "največ %s"
 
 #: libraries/config/FormDisplay.tpl.php:174
 msgid "This setting is disabled, it will not be applied to your configuration"
