Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-22 10:17+0200\n"
-"PO-Revision-Date: 2011-07-24 10:56+0200\n"
+"PO-Revision-Date: 2011-07-24 11:05+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -9923,6 +9923,19 @@ msgid ""
 "statistics from the logs helping you find what caused the\n"
 "        activity spike.</p>"
 msgstr ""
+"<b>Using the monitor:</b><br/>\n"
+"                                 Tamam, ilerlemeye hazırsınız! Bir kere "
+"'İzlemeyi başlat'a tıkladığınızda tarayıcınız tüm görüntülenen\n"
+"                                 çizelgeleri düzenli aralıklarla "
+"yenileyecek. 'Ayarlar' altında çizelgeleri ekleyebilir ve yenileme oranını "
+"değiştirebilirsiniz\n"
+"                                 veya her çizelgenin kendi dişli çark "
+"simgesini kullanarak herhangi bir çizelgeyi kaldırabilirsiniz.\n"
+"                                 <p>When you get to see a sudden spike in "
+"activity, select the relevant time span on any chart by holding down the "
+"       left mouse button and panning over the chart. This will load "
+"statistics from the logs helping you find what caused the        activity "
+"spike.</p>"
 
 #: server_status.php:1356
 msgid ""
