--- a/po/hi.po
+++ b/po/hi.po
@@ -35,8 +35,9 @@ msgid ""
 "parent window, or your browser's security settings are configured to block "
 "cross-window updates."
 msgstr ""
-"लक्ष्य ब्राउज़र विंडो को अद्यतन नहीं किया जा सकता है. शायद आपने मूल विंडो बंद कर दिया है,"
-"या अपनी ब्राउसर की सिक्यूरिटी सेट्टिंग को क्रोस-विंडो अद्यतन के लिए कांफिगुर कर रखा है."
+"लक्ष्य ब्राउज़र विंडो को अद्यतन नहीं किया जा सकता है. शायद आपने मूल विंडो "
+"बंद कर दिया है,या अपनी ब्राउसर की सिक्यूरिटी सेट्टिंग को क्रोस-विंडो अद्यतन "
+"के लिए कांफिगुर कर रखा है."
 
 #: browse_foreigners.php:151 libraries/common.lib.php:2714
 #: libraries/common.lib.php:2721 libraries/common.lib.php:2904
