--- a/po/hi.po
+++ b/po/hi.po
@@ -170,9 +170,8 @@ msgstr "प्रकार/किस्म"
 #: libraries/tbl_properties.inc.php:112 tbl_change.php:328
 #: tbl_printview.php:142 tbl_structure.php:208 tbl_tracking.php:269
 #: tbl_tracking.php:320
-#, fuzzy
 msgid "Null"
-msgstr "अशक्त"
+msgstr "शून्य"
 
 #: db_datadict.php:170 db_structure.php:454 libraries/export/htmlword.php:254
 #: libraries/export/latex.php:361 libraries/export/odt.php:297
