--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-22 10:17+0200\n"
-"PO-Revision-Date: 2011-07-16 14:33+0200\n"
+"PO-Revision-Date: 2011-07-24 20:37+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
 "Language: en_GB\n"
@@ -1116,10 +1116,9 @@ msgstr "Connections / Processes"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:87
-#, fuzzy
 #| msgid "Connections since last refresh"
 msgid "Questions since last refresh"
-msgstr "Connections since last refresh"
+msgstr "Questions since last refresh"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:89
