--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-22 10:17+0200\n"
-"PO-Revision-Date: 2011-07-24 20:37+0200\n"
+"PO-Revision-Date: 2011-07-24 20:38+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
 "Language: en_GB\n"
@@ -1135,7 +1135,7 @@ msgstr "System CPU Usage"
 
 #: js/messages.php:95
 msgid "System memory"
-msgstr ""
+msgstr "System memory"
 
 #: js/messages.php:96
 msgid "System swap"
