Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1155,10 +1155,9 @@ msgstr "Average load"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:102
-#, fuzzy
 #| msgid "Suggestions:"
 msgid "Questions"
-msgstr "Suggestions:"
+msgstr "Questions"
 
 #: js/messages.php:103 server_status.php:867
 msgid "Traffic"
