--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1169,10 +1169,9 @@ msgid "Settings"
 msgstr "Settings"
 
 #: js/messages.php:105
-#, fuzzy
 #| msgid "Remove database"
 msgid "Remove chart"
-msgstr "Remove database"
+msgstr "Remove chart"
 
 #: js/messages.php:106
 msgid "Edit labels and series"
