--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-22 10:17+0200\n"
-"PO-Revision-Date: 2011-07-24 20:38+0200\n"
+"PO-Revision-Date: 2011-07-24 20:39+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
 "Language: en_GB\n"
@@ -1195,7 +1195,7 @@ msgstr "None"
 
 #: js/messages.php:111
 msgid "Resume monitor"
-msgstr ""
+msgstr "Resume monitor"
 
 #: js/messages.php:112
 msgid "Pause monitor"
