--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1199,7 +1199,7 @@ msgstr "Resume monitor"
 
 #: js/messages.php:112
 msgid "Pause monitor"
-msgstr ""
+msgstr "Pause monitor"
 
 #: js/messages.php:114
 msgid "general_log and slow_query_log is enabled."
