--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1203,7 +1203,7 @@ msgstr "Pause monitor"
 
 #: js/messages.php:114
 msgid "general_log and slow_query_log is enabled."
-msgstr ""
+msgstr "general_log and slow_query_log is enabled."
 
 #: js/messages.php:115
 msgid "general_log is enabled."
