Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1207,7 +1207,7 @@ msgstr "general_log and slow_query_log is enabled."
 
 #: js/messages.php:115
 msgid "general_log is enabled."
-msgstr ""
+msgstr "general_log is enabled."
 
 #: js/messages.php:116
 msgid "slow_query_log is enabled."
