Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1211,7 +1211,7 @@ msgstr "general_log is enabled."
 
 #: js/messages.php:116
 msgid "slow_query_log is enabled."
-msgstr ""
+msgstr "slow_query_log is enabled."
 
 #: js/messages.php:117
 msgid "slow_query_log and general_log is disabled."
